--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <body>
     <h1>Welcome to Peleton</h1>
     <p>Track your rides and performance with Strava integration</p>
-    <button onclick="stravaLogin()">Connect with Strava</button>
+    <!-- Add a check to hide this if already authorized -->
+    <button id="strava-login-btn" onclick="stravaLogin()">Connect with Strava</button>
+    
     <!-- Activity list container -->
     <div id="activity-list" class="activity-list">
       <!-- Each activity will be appended here as a card -->
     </div>
+    
     <div id="chart-container" style="width: 60%; margin: 0 auto">
       <canvas id="myChart"></canvas>
     </div>
