--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peleton | Strava Visualization Tool</title>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">  
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -17,8 +17,7 @@
       Connect with Strava
     </button>
 
-    <!-- Calendar to display activities -->
-    <div id="calendar" class="calendar"></div>
+    <div id="activity-list"></div>
 
     <div id="chart-container">
       <canvas id="myChart"></canvas>
