--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peleton | Strava Visualization Tool</title>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">  
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <!-- Company Logo -->
+      <a href="index.html" class="logo">
+        <img src="assets/images/PELETON.png" alt="Peleton Logo" />
+      </a>
+
+      <!-- Navigation Links -->
+      <div class="nav-links">
+        <a href="activities.html">Activities</a>
+        <a href="nutrition.html">Nutrition</a>
+        <a href="tyre-pressure.html">Tyre Pressure</a>
+      </div>
+
+      <!-- Contact Me Button -->
+      <a href="mailto:kgnhughkelly@gmail.com" class="contact-btn">Contact Me</a>
+    </nav>
+
+    <!-- Contact Me Button -->
+    <a href="mailto:kgnhughkelly@gmail.com" class="contact-btn">Contact Me</a>
     <h1>Welcome to Peleton</h1>
     <p>Track your rides and performance with Strava integration</p>
 
