--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <!-- Contact Me Button -->
-      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kgnhughkelly@gmail.com&su=Inquiry&body=Hello, I would like to get in touch with you regarding...">Contact Me</a>
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kgnhughkelly@gmail.com&su=Inquiry&body=Hello, I would like to get in touch with you regarding..." class="contact-btn">Contact Me</a>
     </nav>
 
     <div id="strava-login-section">
