v.1.0.12 | Mobile Responsive Navbar

--- a/index.html
+++ b/index.html
@@ -9,22 +9,30 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- Navbar (Desktop and Mobile) -->
     <nav class="navbar">
       <!-- Company Logo -->
       <a href="index.html" class="logo">
         <img src="assets/images/PELETON.png" alt="Peleton Logo" />
       </a>
 
-      <!-- Navigation Links -->
+      <!-- Navigation Links for larger screens -->
       <div class="nav-links">
         <a href="activities.html">Activities</a>
         <a href="nutrition.html">Nutrition</a>
         <a href="tyre-pressure.html">Tyre Pressure</a>
       </div>
 
-      <!-- Contact Me Button -->
+      <!-- Contact Me Button for larger screens -->
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kgnhughkelly@gmail.com&su=Inquiry&body=Hello, I would like to get in touch with you regarding..." class="contact-btn">Contact Me</a>
+    </nav>
+
+    <!-- Mobile Navbar -->
+    <nav class="mobile-navbar">
+      <a href="activities.html">🏃‍♂️</a>
+      <a href="nutrition.html">🥗</a>
+      <a href="tyre-pressure.html">🚲</a>
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kgnhughkelly@gmail.com&su=Inquiry&body=Hello, I would like to get in touch with you regarding..." class="contact-btn-mobile">📧</a>
     </nav>
 
     <div id="strava-login-section">
