v 1.0.24 | Removal of GetActivities

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
       <!-- Navigation Links for larger screens -->
       <div class="nav-links">
-        <a href="activities.html">Activities</a>
         <a href="nutrition.html">Nutrition</a>
         <a href="tyre-pressure.html">Tyre Pressure</a>
       </div>
@@ -29,7 +28,6 @@
 
     <!-- Mobile Navbar -->
     <nav class="mobile-navbar">
-      <a href="activities.html">🏃‍♂️</a>
       <a href="nutrition.html">🥗</a>
       <a href="tyre-pressure.html">🚲</a>
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kgnhughkelly@gmail.com&su=Inquiry&body=Hello, I would like to get in touch with you regarding..." class="contact-btn-mobile">📧</a>
@@ -41,7 +39,7 @@
         <button id="strava-login-btn" onclick="stravaLogin()">Connect with Strava</button>
     </div>
 
-    <div id="activity-list"></div>
+    <!-- Removed activity list section -->
 
     <div id="chart-container">
       <canvas id="myChart"></canvas>
